Changed avatar image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="cover bg-image"><img src="images/header-background.jpg"/>
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(1px);">
           <div class="text-center p-5">
-            <img class="img-thumbnail rounded-circle shadow-2-strong" src="images/avatar-white.jpeg" width="160" height="140" style="height: 200px;object-fit: cover;width: 200px;">           <div class="header-bio mt-3">
+            <img class="img-thumbnail rounded-circle shadow-2-strong" src="images/avatar-white2.jpeg" width="160" height="140" style="height: 200px;object-fit: cover;width: 200px;">           <div class="header-bio mt-3">
               <div data-aos="zoom-in" data-aos-delay="0">
                 <h2 class="h1">Tiago Costa</h2>
                 <p>Software Engineer</p>
