change github link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="pb-2 fw-bolder"><i class="fab fa-github pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Github</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">/josetpcosta</div>
+              <div class="pb-2">/zetiagocosta</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
@@ -225,7 +225,7 @@
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/zetiagocosta/" target="_blank" title="Linkedin"><i class="fab fa-linkedin pe-2 text-muted"></i><span class="menu-title sr-only">Linkedin</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/josetpcosta" target="_blank" title="Github"><i class="fab fa-github pe-2 text-muted"></i><span class="menu-title sr-only">Github</span></a>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/zetiagocosta" target="_blank" title="Github"><i class="fab fa-github pe-2 text-muted"></i><span class="menu-title sr-only">Github</span></a>
                 </li>
               </ul>
             </nav>
