--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Aspiring software engineer with a resilient and practical mindset, bearer of good team spirit and communication skills.</p>
+          <p>Software engineer with a resilient and practical mindset, bearer of good team spirit and communication skills.</p>
           <p>Professional used to work as a consultant in an agile environment, for companies in the insurance sector and for intergovernmental organizations.</p>
           <p>Motivated with 2 years of area of expertise with Microsoft technologies and frameworks, I am looking for a junior .NET Back-End / Full-Stack developer or Azure DevOps position.</p>
         </div>
